# Quoridor-AI

./: .gitignore  LICENSE  README.md
.github/workflows/: cmake.yml
src/: CMakeLists.txt  main.cpp
src/header/: bitboard.cpp  bitboard.hpp
src/includes/: CMakeLists.txt  QuoridorAIIncludes.hpp  bitboard.cpp  bitboard.hpp  bitboardConst.cpp  bitboardConst.hpp  board.cpp  board.hpp  misc.cpp  misc.hpp  setting.cpp  setting.hpp  types.cpp  types.hpp  wall.cpp  wall.hpp  wallman.cpp  wallman.hpp
src/includes/dijkstra/: CMakeLists.txt  DijkstraAllIncludes.hpp  dijkstra.cpp  dijkstra.hpp  misc.cpp  misc.hpp
src/includes/hasher/: CMakeLists.txt  HasherAllIncludes.hpp  hash.cpp  hash.hpp  keys.cpp  keys.hpp  mt.cpp  mt.hpp  random.cpp  random.hpp
src/includes/indexer/: CMakeLists.txt  IndexerAllIncludes.hpp  indexer.cpp  indexer.hpp  indexes.cpp  indexes.hpp
src/includes/util/: CMakeLists.txt  UtilAllIncludes.hpp  moveAnalyze.cpp  moveAnalyze.hpp  shorthand.cpp  shorthand.hpp
test/: CMakeLists.txt  bitboardConstTest.cpp  bitboardTest.cpp  boardTest.cpp  testTest.cpp  typesTest.cpp  wallTest.cpp  wallmanTest.cpp
test/dijkstra/: dijkstraTest.cpp  misc.cpp
test/hasher/: hashTest.cpp  randomTest.cpp
test/indexer/: indexerTest.cpp
test/util/: shorthandTest.cpp
